@@ -1,0 +1,11 @@
+# $NetBSD: Makefile,v 1.1.1.1 2004/11/01 20:37:44 jdolecek Exp $
+
+DISTNAME=	Net_URL-1.0.10
+CATEGORIES+=	net
+
+MAINTAINER=	tech-pkg@NetBSD.org
+HOMEPAGE= 	http://pear.php.net/package/Net_URL/
+COMMENT=	PHP classes to easy parsing of URLs
+
+.include "../../lang/php/pear.mk"
+.include "../../mk/bsd.pkg.mk"
