@@ -1,0 +1,1 @@
+@comment $NetBSD: PLIST,v 1.1.1.1 2004/11/01 20:37:44 jdolecek Exp $
